--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Lantern Dragon Works</title>
-  <base href="https://jscholar.github.io/lantern-dragon-v2/stories">
+  <base href="https://jscholar.github.io/lantern-dragon-v2/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="assets/favicon/favicon.ico">
